land use data ready

--- a/notebooks/sjoin_landuse_total.ipynb
+++ b/notebooks/sjoin_landuse_total.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +298,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +333,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -419,7 +419,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,12 +445,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[u'Commercial' u'High Density Residential' u'Industrial'\n",
+      " u'Multi-Family Residential']\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>GPS_DATETIMESTAMP</th>\n",
+       "      <th>GPS_LAT</th>\n",
+       "      <th>GPS_LON</th>\n",
+       "      <th>GPS_Speed</th>\n",
+       "      <th>GPS_Alt</th>\n",
+       "      <th>GPS_Sats</th>\n",
+       "      <th>GPS_Fix</th>\n",
+       "      <th>GPS_Quality</th>\n",
+       "      <th>AMB_Temp</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RDQ_AcYMea</th>\n",
+       "      <th>RDQ_AcZ</th>\n",
+       "      <th>RDQ_AcZMin</th>\n",
+       "      <th>RDQ_AcZMax</th>\n",
+       "      <th>RDQ_AcZMea</th>\n",
+       "      <th>SamplingCount</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>index_right</th>\n",
+       "      <th>LU05_DESC</th>\n",
+       "      <th>LUCODE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>132</td>\n",
+       "      <td>2015-10-26 2:48:45.0</td>\n",
+       "      <td>42.34143</td>\n",
+       "      <td>-71.080329</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>183.7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5672</td>\n",
+       "      <td>9.1006</td>\n",
+       "      <td>7.9238</td>\n",
+       "      <td>9.2183</td>\n",
+       "      <td>8.6780</td>\n",
+       "      <td>255</td>\n",
+       "      <td>POINT (-71.08032900000001 42.34143)</td>\n",
+       "      <td>4393</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>134</td>\n",
+       "      <td>2015-10-26 2:48:45.0</td>\n",
+       "      <td>42.34143</td>\n",
+       "      <td>-71.080329</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>183.7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5544</td>\n",
+       "      <td>9.1790</td>\n",
+       "      <td>8.2376</td>\n",
+       "      <td>9.3359</td>\n",
+       "      <td>8.7051</td>\n",
+       "      <td>254</td>\n",
+       "      <td>POINT (-71.08032900000001 42.34143)</td>\n",
+       "      <td>4393</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>136</td>\n",
+       "      <td>2015-10-26 2:48:45.0</td>\n",
+       "      <td>42.34143</td>\n",
+       "      <td>-71.080329</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>183.7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.24</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5233</td>\n",
+       "      <td>8.3945</td>\n",
+       "      <td>8.1199</td>\n",
+       "      <td>9.1790</td>\n",
+       "      <td>8.6665</td>\n",
+       "      <td>255</td>\n",
+       "      <td>POINT (-71.08032900000001 42.34143)</td>\n",
+       "      <td>4393</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>138</td>\n",
+       "      <td>2015-10-26 2:48:45.0</td>\n",
+       "      <td>42.34143</td>\n",
+       "      <td>-71.080329</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>183.7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5401</td>\n",
+       "      <td>8.5514</td>\n",
+       "      <td>8.1591</td>\n",
+       "      <td>9.1006</td>\n",
+       "      <td>8.6938</td>\n",
+       "      <td>254</td>\n",
+       "      <td>POINT (-71.08032900000001 42.34143)</td>\n",
+       "      <td>4393</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>140</td>\n",
+       "      <td>2015-10-26 2:48:45.0</td>\n",
+       "      <td>42.34143</td>\n",
+       "      <td>-71.080329</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>183.7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5836</td>\n",
+       "      <td>8.6299</td>\n",
+       "      <td>8.0022</td>\n",
+       "      <td>9.5321</td>\n",
+       "      <td>8.6882</td>\n",
+       "      <td>255</td>\n",
+       "      <td>POINT (-71.08032900000001 42.34143)</td>\n",
+       "      <td>4393</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ID     GPS_DATETIMESTAMP   GPS_LAT    GPS_LON  GPS_Speed  GPS_Alt  \\\n",
+       "0  132  2015-10-26 2:48:45.0  42.34143 -71.080329       0.47    183.7   \n",
+       "1  134  2015-10-26 2:48:45.0  42.34143 -71.080329       0.47    183.7   \n",
+       "2  136  2015-10-26 2:48:45.0  42.34143 -71.080329       0.47    183.7   \n",
+       "3  138  2015-10-26 2:48:45.0  42.34143 -71.080329       0.47    183.7   \n",
+       "4  140  2015-10-26 2:48:45.0  42.34143 -71.080329       0.47    183.7   \n",
+       "\n",
+       "   GPS_Sats  GPS_Fix  GPS_Quality  AMB_Temp   ...    RDQ_AcYMea  RDQ_AcZ  \\\n",
+       "0         4        1            1     21.23   ...        0.5672   9.1006   \n",
+       "1         4        1            1     21.23   ...        0.5544   9.1790   \n",
+       "2         4        1            1     21.24   ...        0.5233   8.3945   \n",
+       "3         4        1            1     21.23   ...        0.5401   8.5514   \n",
+       "4         4        1            1     21.23   ...        0.5836   8.6299   \n",
+       "\n",
+       "   RDQ_AcZMin RDQ_AcZMax  RDQ_AcZMea  SamplingCount  \\\n",
+       "0      7.9238     9.2183      8.6780            255   \n",
+       "1      8.2376     9.3359      8.7051            254   \n",
+       "2      8.1199     9.1790      8.6665            255   \n",
+       "3      8.1591     9.1006      8.6938            254   \n",
+       "4      8.0022     9.5321      8.6882            255   \n",
+       "\n",
+       "                              geometry  index_right   LU05_DESC  LUCODE  \n",
+       "0  POINT (-71.08032900000001 42.34143)         4393  Commercial      15  \n",
+       "1  POINT (-71.08032900000001 42.34143)         4393  Commercial      15  \n",
+       "2  POINT (-71.08032900000001 42.34143)         4393  Commercial      15  \n",
+       "3  POINT (-71.08032900000001 42.34143)         4393  Commercial      15  \n",
+       "4  POINT (-71.08032900000001 42.34143)         4393  Commercial      15  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comm = joined[joined.LU05_DESC =='Commercial']\n",
+    "mfr = joined[joined.LU05_DESC=='Multi-Family Residential']\n",
+    "indus = joined[joined.LU05_DESC=='Industrial']\n",
+    "hdr = joined[joined.LU05_DESC=='High Density Residential']\n",
+    "\n",
+    "my_list = [comm, mfr, indus, hdr]\n",
+    "data = pd.DataFrame()\n",
+    "\n",
+    "for i in my_list:\n",
+    "    data = my_df.append(i)\n",
+    "    \n",
+    "print np.unique(data.LU05_DESC)\n",
+    "print ''\n",
+    "data.head()"
+   ]
   }
  ],
  "metadata": {
