--- a/notebooks/SVM_landuse.ipynb
+++ b/notebooks/SVM_landuse.ipynb
@@ -11,20 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
     "import pylab as pl\n",
+    "from sklearn import datasets\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
     "from sklearn import svm\n",
     "from sklearn.grid_search import GridSearchCV\n",
     "from sklearn import preprocessing\n",
     "import math\n",
     "import warnings\n",
+    "import os\n",
     "\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -35,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -96,12 +99,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we successfully(OS) predict the 65.4633818315 percent of data using a linear kernel\n"
+      "we successfully(OS) predict the 58.830541631 percent of data using a linear kernel\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVC(kernel='linear',C=1.0) \n",
+    "clf = OneVsRestClassifier(svm.SVC(kernel='linear', C=1.0, class_weight='balanced'))\n",
     "clf.fit(x_predictors_train, y_train)\n",
     "\n",
     "right=1.0*(clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
@@ -121,12 +124,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we successfully(OS) predict the 65.5061743489 percent of data using a rbf kernel\n"
+      "we successfully(OS) predict the 58.530994009 percent of data using a rbf kernel\n"
      ]
     }
    ],
    "source": [
-    "rbf_clf = svm.SVC(kernel='rbf',C=1.0) \n",
+    "rbf_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, class_weight='balanced'))\n",
     "rbf_clf.fit(x_predictors_train, y_train)\n",
     "\n",
     "right=1.0*(rbf_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
@@ -145,12 +148,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we successfully(OS) predict the 65.5061743489 percent of data using a poly kernel\n"
+      "we successfully(OS) predict the 53.1116273383 percent of data using a poly kernel\n"
      ]
     }
    ],
    "source": [
-    "poly_clf = svm.SVC(kernel='poly',C=1.0, degree = 3) \n",
+    "poly_clf = OneVsRestClassifier(svm.SVC(kernel='poly', C=1.0, class_weight='balanced'))\n",
     "poly_clf.fit(x_predictors_train, y_train)\n",
     "\n",
     "right=1.0*(poly_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
@@ -159,95 +162,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Tuning  parameters"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4],\n",
-    "                     'C': [1, 10, 100, 1000]},\n",
-    "                    {'kernel': ['linear'], 'C': [1, 10, 100, 1000]}]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "validate_clf = GridSearchCV(svm.SVC(C=1), tuned_parameters, cv=5,\n",
-    "                       scoring='%s_weighted' % 'recall')\n",
-    "validate_clf.fit(x_predictors_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "validate_clf.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "rbf_clf = svm.SVC(kernel='rbf',C=1.0) \n",
-    "rbf_clf.fit(x_predictors_train, y_train)\n",
-    "\n",
-    "right=1.0*(rbf_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
-    "\n",
-    "print \"we successfully(OS) predict the {} percent of data using a rbf kernel\".format((right)*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "C = np.linspace(-5,50,10)\n",
-    "C=[math.exp(i) for i in C]\n",
-    "OS_validation=[]\n",
-    "for c in C:\n",
-    "    clf = svm.SVC(kernel='linear',C=c) \n",
-    "    clf.fit(x_predictors_train, y_train)\n",
-    "    right=1.0*(clf.predict(x_predictors_valid)==np.asarray(y_valid)).sum()/len(y_valid)\n",
-    "    OS_validation.append(right)\n",
-    "    \n",
-    "temp=pd.DataFrame([C,OS_validation]).T\n",
-    "ind=len(temp.loc[temp.iloc[:,1]==temp.iloc[:,1].max()])/2 \n",
-    "C_opt=temp.loc[temp.iloc[:,1]==temp.iloc[:,1].max()].iloc[ind,0]\n",
-    "\n",
-    "\n",
-    "C=[math.log(y,10) for y in C]# for a better graph\n",
-    "pylab.plot(C,OS_validation,'b',)\n",
-    "pylab.legend(loc='upper right')\n",
-    "pylab.ylabel('Accuracy')\n",
-    "pylab.xlabel('log(C)')\n",
-    "pylab.show()\n",
-    "\n",
-    "print(\"The optimal C we found is:{}\".format(C_opt)) \n"
+    "os.system('say \"Completed prediction for flags\"');"
    ]
   },
   {
@@ -262,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -291,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -305,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -331,63 +253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we successfully(OS) predict the 65.4633818315 percent of data using a linear kernel\n"
-     ]
-    }
-   ],
-   "source": [
-    "clf = svm.SVC(kernel='linear',C=1.0) \n",
-    "clf.fit(x_sound_predictors_train, y_train)\n",
-    "\n",
-    "right=1.0*(clf.predict(x_sound_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
-    "\n",
-    "print \"we successfully(OS) predict the {} percent of data using a linear kernel\".format((right)*100)\n",
-    "# This is exactly the same thing as with the flags, something feels wrong with my code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.29966291402402745 1.0 True]\n",
-      " [0.3079163948403205 1.0 False]\n",
-      " [0.2926703816657787 1.0 False]\n",
-      " [0.2747878398971429 1.0 False]\n",
-      " [0.2801755287633341 1.0 False]]\n",
-      "[[0 1.0 True]\n",
-      " [0 1.0 False]\n",
-      " [0 1.0 False]\n",
-      " [0 1.0 False]\n",
-      " [0 1.0 False]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print x_sound_predictors_train[0:5, :]\n",
-    "print x_predictors_train[0:5, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -400,29 +268,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "foo_clf = svm.SVC(kernel='linear',C=1.0) \n",
-    "foo_clf.fit(x_std_predictors_train, y_train)\n",
-    "\n",
-    "right=1.0*(foo_clf.predict(x_std_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
-    "\n",
-    "print \"we successfully(OS) predict the {} percent of data using a linear kernel\".format((right)*100)\n",
-    "# This is exactly the same thing as with the flags, something feels wrong with my code"
+    "os.system('say \"Need to predict for standard normal variables\"');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuning Parameters\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ntuned_parameters = [{\\'kernel\\': [\\'rbf\\'], \\'gamma\\': [1e-3, 1e-4],\\n                     \\'C\\': [1, 10, 100, 1000]},\\n                    {\\'kernel\\': [\\'linear\\'], \\'C\\': [1, 10, 100, 1000]}]\\n\\nvalidate_clf = GridSearchCV(svm.SVC(C=1), tuned_parameters, cv=5,\\n                       scoring=\\'%s_weighted\\' % \\'recall\\')\\nvalidate_clf.fit(x_predictors_train, y_train)\\n\\nvalidate_clf.best_params_\\n\\nC = np.linspace(-5,50,10)\\nC=[math.exp(i) for i in C]\\nOS_validation=[]\\nfor c in C:\\n    clf = svm.SVC(kernel=\\'linear\\',C=c) \\n    clf.fit(x_predictors_train, y_train)\\n    right=1.0*(clf.predict(x_predictors_valid)==np.asarray(y_valid)).sum()/len(y_valid)\\n    OS_validation.append(right)\\n    \\ntemp=pd.DataFrame([C,OS_validation]).T\\nind=len(temp.loc[temp.iloc[:,1]==temp.iloc[:,1].max()])/2 \\nC_opt=temp.loc[temp.iloc[:,1]==temp.iloc[:,1].max()].iloc[ind,0]\\n\\n\\nC=[math.log(y,10) for y in C]# for a better graph\\npylab.plot(C,OS_validation,\\'b\\',)\\npylab.legend(loc=\\'upper right\\')\\npylab.ylabel(\\'Accuracy\\')\\npylab.xlabel(\\'log(C)\\')\\npylab.show()\\n\\nprint(\"The optimal C we found is:{}\".format(C_opt)) \\n'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4],\n",
+    "                     'C': [1, 10, 100, 1000]},\n",
+    "                    {'kernel': ['linear'], 'C': [1, 10, 100, 1000]}]\n",
+    "\n",
+    "validate_clf = GridSearchCV(svm.SVC(C=1), tuned_parameters, cv=5,\n",
+    "                       scoring='%s_weighted' % 'recall')\n",
+    "validate_clf.fit(x_predictors_train, y_train)\n",
+    "\n",
+    "validate_clf.best_params_\n",
+    "\n",
+    "C = np.linspace(-5,50,10)\n",
+    "C=[math.exp(i) for i in C]\n",
+    "OS_validation=[]\n",
+    "for c in C:\n",
+    "    clf = svm.SVC(kernel='linear',C=c) \n",
+    "    clf.fit(x_predictors_train, y_train)\n",
+    "    right=1.0*(clf.predict(x_predictors_valid)==np.asarray(y_valid)).sum()/len(y_valid)\n",
+    "    OS_validation.append(right)\n",
+    "    \n",
+    "temp=pd.DataFrame([C,OS_validation]).T\n",
+    "ind=len(temp.loc[temp.iloc[:,1]==temp.iloc[:,1].max()])/2 \n",
+    "C_opt=temp.loc[temp.iloc[:,1]==temp.iloc[:,1].max()].iloc[ind,0]\n",
+    "\n",
+    "\n",
+    "C=[math.log(y,10) for y in C]# for a better graph\n",
+    "pylab.plot(C,OS_validation,'b',)\n",
+    "pylab.legend(loc='upper right')\n",
+    "pylab.ylabel('Accuracy')\n",
+    "pylab.xlabel('log(C)')\n",
+    "pylab.show()\n",
+    "\n",
+    "print(\"The optimal C we found is:{}\".format(C_opt)) \n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
