Linear classification using standard normal values w/o parameter tuning

--- a/notebooks/SVM_landuse.ipynb
+++ b/notebooks/SVM_landuse.ipynb
@@ -241,7 +241,8 @@
     "# Adding sound std normal values\n",
     "x_sound_predictors_train = np.insert(x_sound_predictors_train, 0,std_norm_sound_train, axis = 1)\n",
     "x_sound_predictors_test = np.insert(x_sound_predictors_test, 0,std_norm_sound_test, axis = 1)\n",
-    "x_sound_predictors_valid = np.insert(x_sound_predictors_valid, 0,std_norm_sound_valid, axis = 1)\n"
+    "x_sound_predictors_valid = np.insert(x_sound_predictors_valid, 0,std_norm_sound_valid, axis = 1)\n",
+    "#TODO : Include accelerator values on all axes "
    ]
   },
   {
@@ -268,13 +269,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we successfully(OS) predict the 52.2129844724 percent of data using a linear kernel\n"
+     ]
+    }
+   ],
    "source": [
-    "os.system('say \"Need to predict for standard normal variables\"');"
+    "clf = OneVsRestClassifier(svm.SVC(kernel='linear', C=1.0, class_weight='balanced'))\n",
+    "clf.fit(x_std_predictors_train, y_train)\n",
+    "\n",
+    "right=1.0*(clf.predict(x_std_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "\n",
+    "print \"we successfully(OS) predict the {} percent of data using a linear kernel\".format((right)*100)\n",
+    "\n",
+    "os.system('say \"Completed classification using standard normal variables\"');"
    ]
   },
   {
