Pushing code to run on compute

--- a/notebooks/SVM_landuse.ipynb
+++ b/notebooks/SVM_landuse.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prediction using flags\n",
+    "# Section 1 : Prediction using flags\n",
     "    - is_loud\n",
     "    - is_dark\n",
     "    - is_bump\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -104,17 +104,18 @@
     }
    ],
    "source": [
-    "clf = OneVsRestClassifier(svm.SVC(kernel='linear', C=1.0, class_weight='balanced'))\n",
-    "clf.fit(x_predictors_train, y_train)\n",
+    "#Linear Kernel\n",
+    "bool_clf = OneVsRestClassifier(svm.SVC(kernel='linear', C=1.0, class_weight='balanced'))\n",
+    "bool_clf.fit(x_predictors_train, y_train)\n",
     "\n",
-    "right=1.0*(clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "right=1.0*(bool_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
     "\n",
     "print \"we successfully(OS) predict the {} percent of data using a linear kernel\".format((right)*100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -129,17 +130,70 @@
     }
    ],
    "source": [
-    "rbf_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, class_weight='balanced'))\n",
-    "rbf_clf.fit(x_predictors_train, y_train)\n",
+    "# RBF kernel with gamma = auto (1/4 in this case)\n",
+    "bool_rbf_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, class_weight='balanced'))\n",
+    "bool_rbf_clf.fit(x_predictors_train, y_train)\n",
     "\n",
-    "right=1.0*(rbf_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "right=1.0*(bool_rbf_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
     "\n",
     "print \"we successfully(OS) predict the {} percent of data using a rbf kernel\".format((right)*100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we successfully(OS) predict the 59.1239760362 percent of data using a rbf kernel\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RBF kernel with gamma = 0.01\n",
+    "bool_rbf_low_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, gamma = 0.01, class_weight='balanced'))\n",
+    "bool_rbf_low_clf.fit(x_predictors_train, y_train)\n",
+    "\n",
+    "right=1.0*(bool_rbf_low_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "\n",
+    "print \"we successfully(OS) predict the {} percent of data using a rbf kernel\".format((right)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we successfully(OS) predict the 61.1382809634 percent of data using a rbf kernel\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RBF kernel with gamma = 0.5\n",
+    "bool_rbf_high_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, gamma = 0.5, class_weight='balanced'))\n",
+    "bool_rbf_high_clf.fit(x_predictors_train, y_train)\n",
+    "\n",
+    "right=1.0*(bool_rbf_high_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "\n",
+    "print \"we successfully(OS) predict the {} percent of data using a rbf kernel\".format((right)*100)\n",
+    "\n",
+    "#Caveat gamma higher than 1/num_features risks overfitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -153,10 +207,10 @@
     }
    ],
    "source": [
-    "poly_clf = OneVsRestClassifier(svm.SVC(kernel='poly', C=1.0, class_weight='balanced'))\n",
-    "poly_clf.fit(x_predictors_train, y_train)\n",
+    "bool_poly_clf = OneVsRestClassifier(svm.SVC(kernel='poly', C=1.0, class_weight='balanced'))\n",
+    "bool_poly_clf.fit(x_predictors_train, y_train)\n",
     "\n",
-    "right=1.0*(poly_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "right=1.0*(bool_poly_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
     "\n",
     "print \"we successfully(OS) predict the {} percent of data using a poly kernel\".format((right)*100)"
    ]
@@ -176,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prediction using standard normal variables\n",
+    "# Section 2 : Prediction using standard normal variables\n",
     "    - Sound\n",
     "    - Light\n",
     "    - Z axis acceleration"
@@ -184,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -227,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -254,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -294,10 +348,97 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 0, 3])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Tuning Parameters\n"
+    "pd.unique(clf.predict(x_std_predictors_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we successfully(OS) predict the 52.2129844724 percent of data using a linear kernel\n"
+     ]
+    }
+   ],
+   "source": [
+    "rbf_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, class_weight='balanced'))\n",
+    "rbf_clf.fit(x_std_predictors_train, y_train)\n",
+    "\n",
+    "right=1.0*(clf.predict(x_std_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "\n",
+    "print \"we successfully(OS) predict the {} percent of data using a linear kernel\".format((right)*100)\n",
+    "\n",
+    "os.system('say \"Completed classification using standard normal variables\"');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 0, 2, 1])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.unique(rbf_clf.predict(x_std_predictors_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we successfully(OS) predict the 53.1116273383 percent of data using a poly kernel\n"
+     ]
+    }
+   ],
+   "source": [
+    "poly_clf = OneVsRestClassifier(svm.SVC(kernel='poly', C=1.0, class_weight='balanced'))\n",
+    "poly_clf.fit(x_predictors_train, y_train)\n",
+    "\n",
+    "right=1.0*(poly_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "\n",
+    "print \"we successfully(OS) predict the {} percent of data using a poly kernel\".format((right)*100)"
    ]
   },
   {
@@ -310,7 +451,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\ntuned_parameters = [{\\'kernel\\': [\\'rbf\\'], \\'gamma\\': [1e-3, 1e-4],\\n                     \\'C\\': [1, 10, 100, 1000]},\\n                    {\\'kernel\\': [\\'linear\\'], \\'C\\': [1, 10, 100, 1000]}]\\n\\nvalidate_clf = GridSearchCV(svm.SVC(C=1), tuned_parameters, cv=5,\\n                       scoring=\\'%s_weighted\\' % \\'recall\\')\\nvalidate_clf.fit(x_predictors_train, y_train)\\n\\nvalidate_clf.best_params_\\n\\nC = np.linspace(-5,50,10)\\nC=[math.exp(i) for i in C]\\nOS_validation=[]\\nfor c in C:\\n    clf = svm.SVC(kernel=\\'linear\\',C=c) \\n    clf.fit(x_predictors_train, y_train)\\n    right=1.0*(clf.predict(x_predictors_valid)==np.asarray(y_valid)).sum()/len(y_valid)\\n    OS_validation.append(right)\\n    \\ntemp=pd.DataFrame([C,OS_validation]).T\\nind=len(temp.loc[temp.iloc[:,1]==temp.iloc[:,1].max()])/2 \\nC_opt=temp.loc[temp.iloc[:,1]==temp.iloc[:,1].max()].iloc[ind,0]\\n\\n\\nC=[math.log(y,10) for y in C]# for a better graph\\npylab.plot(C,OS_validation,\\'b\\',)\\npylab.legend(loc=\\'upper right\\')\\npylab.ylabel(\\'Accuracy\\')\\npylab.xlabel(\\'log(C)\\')\\npylab.show()\\n\\nprint(\"The optimal C we found is:{}\".format(C_opt)) \\n'"
+       "array([0, 2, 1, 3])"
       ]
      },
      "execution_count": 14,
@@ -319,12 +460,29 @@
     }
    ],
    "source": [
-    "'''\n",
-    "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4],\n",
-    "                     'C': [1, 10, 100, 1000]},\n",
-    "                    {'kernel': ['linear'], 'C': [1, 10, 100, 1000]}]\n",
+    "pd.unique(poly_clf.predict(x_std_predictors_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Section 3 : Tuning Parameters\n",
     "\n",
-    "validate_clf = GridSearchCV(svm.SVC(C=1), tuned_parameters, cv=5,\n",
+    "## Tuning for flags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tuned_parameters = [ {'kernel': ['linear'], 'C': [0.1, 1, 10, 100, 1000]} ]\n",
+    "\n",
+    "validate_clf = GridSearchCV(svm.SVC(C=1, class_weight='balanced'), tuned_parameters, cv=5,\n",
     "                       scoring='%s_weighted' % 'recall')\n",
     "validate_clf.fit(x_predictors_train, y_train)\n",
     "\n",
@@ -352,7 +510,67 @@
     "pylab.show()\n",
     "\n",
     "print(\"The optimal C we found is:{}\".format(C_opt)) \n",
-    "'''"
+    "''' '''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "os.system('say \"tuning parameters done\"');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.00000000e-09,   1.00000000e-08,   1.00000000e-07,\n",
+       "         1.00000000e-06,   1.00000000e-05,   1.00000000e-04,\n",
+       "         1.00000000e-03,   1.00000000e-02,   1.00000000e-01,\n",
+       "         1.00000000e+00,   1.00000000e+01,   1.00000000e+02,\n",
+       "         1.00000000e+03])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.logspace(-9, 3, 13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.linspace?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4],\n",
+    "                     'C': [1, 10, 100, 1000]},"
    ]
   }
  ],
