All SVM notebooks

--- a/notebooks/SVM_landuse.ipynb
+++ b/notebooks/SVM_landuse.ipynb
@@ -77,20 +77,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Section 1 : Prediction using flags\n",
-    "    - is_loud\n",
-    "    - is_dark\n",
-    "    - is_bump\n",
-    "\n",
-    "### Training over several types of kernels"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -107,15 +95,26 @@
     "#Linear Kernel\n",
     "bool_clf = OneVsRestClassifier(svm.SVC(kernel='linear', C=1.0, class_weight='balanced'))\n",
     "bool_clf.fit(x_predictors_train, y_train)\n",
+    "linear_y_pred = bool_clf.predict(x_predictors_test)\n",
     "\n",
-    "right=1.0*(bool_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "right=1.0*(linear_y_pred==np.asarray(y_test)).sum()/len(y_test)\n",
     "\n",
-    "print \"we successfully(OS) predict the {} percent of data using a linear kernel\".format((right)*100)"
+    "print \"we successfully(OS) predict the {} percent of data using a linear kernel\".format((right)*100)\n",
+    "os.system('say \"First Linear Done\"');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -133,15 +132,17 @@
     "# RBF kernel with gamma = auto (1/4 in this case)\n",
     "bool_rbf_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, class_weight='balanced'))\n",
     "bool_rbf_clf.fit(x_predictors_train, y_train)\n",
+    "rbf_y_pred = bool_rbf_clf.predict(x_predictors_test)\n",
     "\n",
-    "right=1.0*(bool_rbf_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "right=1.0*(rbf_y_pred==np.asarray(y_test)).sum()/len(y_test)\n",
     "\n",
-    "print \"we successfully(OS) predict the {} percent of data using a rbf kernel\".format((right)*100)"
+    "print \"we successfully(OS) predict the {} percent of data using a rbf kernel\".format((right)*100)\n",
+    "os.system('say \"First RBF Done\"');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -158,33 +159,28 @@
     "# RBF kernel with gamma = 0.01\n",
     "bool_rbf_low_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, gamma = 0.01, class_weight='balanced'))\n",
     "bool_rbf_low_clf.fit(x_predictors_train, y_train)\n",
+    "rbf_low_y_pred = bool_rbf_low_clf.predict(x_predictors_test)\n",
     "\n",
-    "right=1.0*(bool_rbf_low_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "right=1.0*(rbf_low_y_pred==np.asarray(y_test)).sum()/len(y_test)\n",
     "\n",
-    "print \"we successfully(OS) predict the {} percent of data using a rbf kernel\".format((right)*100)"
+    "print \"we successfully(OS) predict the {} percent of data using a rbf kernel\".format((right)*100)\n",
+    "os.system('say \"second RBF Done\"');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we successfully(OS) predict the 61.1382809634 percent of data using a rbf kernel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RBF kernel with gamma = 0.5\n",
     "bool_rbf_high_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, gamma = 0.5, class_weight='balanced'))\n",
     "bool_rbf_high_clf.fit(x_predictors_train, y_train)\n",
+    "rbf_high_y_pred = bool_rbf_high_clf.predict(x_predictors_test)\n",
     "\n",
-    "right=1.0*(bool_rbf_high_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "right=1.0*(rbf_high_y_pred==np.asarray(y_test)).sum()/len(y_test)\n",
     "\n",
     "print \"we successfully(OS) predict the {} percent of data using a rbf kernel\".format((right)*100)\n",
     "\n",
@@ -193,31 +189,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we successfully(OS) predict the 53.1116273383 percent of data using a poly kernel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bool_poly_clf = OneVsRestClassifier(svm.SVC(kernel='poly', C=1.0, class_weight='balanced'))\n",
     "bool_poly_clf.fit(x_predictors_train, y_train)\n",
+    "poly_y_pred = bool_poly_clf.predict(x_predictors_test)\n",
     "\n",
-    "right=1.0*(bool_poly_clf.predict(x_predictors_test)==np.asarray(y_test)).sum()/len(y_test)\n",
+    "right=1.0*(poly_y_pred==np.asarray(y_test)).sum()/len(y_test)\n",
     "\n",
     "print \"we successfully(OS) predict the {} percent of data using a poly kernel\".format((right)*100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -281,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -308,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -323,19 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we successfully(OS) predict the 52.2129844724 percent of data using a linear kernel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf = OneVsRestClassifier(svm.SVC(kernel='linear', C=1.0, class_weight='balanced'))\n",
     "clf.fit(x_std_predictors_train, y_train)\n",
@@ -349,41 +330,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 0, 3])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.unique(clf.predict(x_std_predictors_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we successfully(OS) predict the 52.2129844724 percent of data using a linear kernel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rbf_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, class_weight='balanced'))\n",
     "rbf_clf.fit(x_std_predictors_train, y_train)\n",
@@ -397,41 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3, 0, 2, 1])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.unique(rbf_clf.predict(x_std_predictors_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we successfully(OS) predict the 53.1116273383 percent of data using a poly kernel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "poly_clf = OneVsRestClassifier(svm.SVC(kernel='poly', C=1.0, class_weight='balanced'))\n",
     "poly_clf.fit(x_predictors_train, y_train)\n",
@@ -443,22 +386,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 2, 1, 3])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.unique(poly_clf.predict(x_std_predictors_test))"
    ]
@@ -526,33 +458,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  1.00000000e-09,   1.00000000e-08,   1.00000000e-07,\n",
-       "         1.00000000e-06,   1.00000000e-05,   1.00000000e-04,\n",
-       "         1.00000000e-03,   1.00000000e-02,   1.00000000e-01,\n",
-       "         1.00000000e+00,   1.00000000e+01,   1.00000000e+02,\n",
-       "         1.00000000e+03])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.logspace(-9, 3, 13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -576,9 +493,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Plume Conda",
    "language": "python",
-   "name": "python2"
+   "name": "plume_conda"
   },
   "language_info": {
    "codemirror_mode": {
@@ -590,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
